# libaditya

./: .gitignore  CLAUDE.md  LICENSE  README.md  TODO.md  __init__.py  chart-ex.sbc  chart-template.pyph  chart-template.sbc  charts  chtk2pyph.py  chtk2sbc.py  deva.list  dict.deva  dict.eng  dict.iast  dict.iast.sbc  dict.mixed  dict.mixed.sbc  dict.template  done.md  iast.list  make-sbc-image.py  make_sbc_image.py  pyphclasses.py  pyphconstants.py  pyphdraw.py  pyphemeris.py  pyphglobals.py  pyphlocation.py  pyphobjs.py  pyphprint.py  pyphread.py  pyphutils.py  pyphvargas.py  pyproject.toml  sbc-legacy.py  sbc.py  sbc_config.py  sbc_constants.py  (+6 more)
claude/: api-surface.md
holding/: chtk2chtk.py  chtk2pyph.py  chtk2sbc.py  sbc.py  sbc_config.py  sbc_constants.py  sbc_names.py
holding/sbc-config/themes/: joshs-theme.sbc  like-kala-theme.sbc  other-theme.sbc  template-theme.sbc
images/sbc-themes/: joshs-theme.sbc  template-theme.sbc
legacy/: bootstrap_the_stars.py  create_fixed_stars.py  legacy.py  stars.py
legacy/dict/: dict.abrev  dict.eng  dict.iast  dict.template
libaditya/: __init__.py  _version.py  constants.py  legacy.py  names.toml  names_dict_ruff.py.txt  print_functions.py  read.py  tests.py  utils.py  vargas_holding.py  write.py
libaditya/calc/: __init__.py  api.py  avasthas.py  hellenistic.py  jaimini.py  jaimini_get.py  kala.py  panchanga.py  rashi.py  returns.py  swe_functions.py  varga.py  vimshottari.py
libaditya/calc/docs/: jaimini-get-arch.md
libaditya/cards/: __init__.py  card.py  cards_constants.py  cards_of_truth.py  cot.py  deck.py  spread.py
libaditya/charts/: __init__.py  api.py  bodygraph.py  chart.py  charts.py  jaimini.py  tajika.py  varga.py  vargas.py
libaditya/dict/: dict.deva  dict.glyph
libaditya/draw/: __init__.py  draw_bodygraph.py  draw_sbc.py
libaditya/hd/: __init__.py  bodygraph.py  calc.py  constants.py  context.py  longitude.py
libaditya/hd/draw/: draw_bodygraph.py
libaditya/hd/draw/themes/: default-theme
libaditya/objects/: __init__.py  celestial_object.py  context.py  cusps.py  extended_longitude.py  julian_day.py  location.py  longitude.py  nakshatra.py  nakshatras.py  planet.py  planets.py  shadbala.py  signs.py  swe_functions.py
libaditya/pyphemeris/: defaults.py  parse.py  pyphemeris.py  test.py  to_test
libaditya/star_signs/: __init__.py  create_fixed_stars.py  fixed_stars.py  star_signs.py  stars.py
libaditya/stars/: README.md  __init__.py  fixed_star.py  fixed_stars.py  make_swe_stars.py  sefstars.txt  sefstars_oneper.txt  star-sign-boundaries  stars.py  test.py  test.txt  the_stars.py  utilities.py  utils.py
libaditya/stars/new-swe-stars/: README.md  make_swe_stars.py
libaditya/stars/stellarium/: __init__.py  stellarium.py
libaditya/stars/stellarium/remote_control/: __init__.py  location.py  locationsearch.py  main.py  objects.py  scripts.py  simbad.py  stelaction.py  stelproperty.py  view.py
old/: deva.list  pyphconstants.py  pyphdraw.py  sbc-legacy.py
pyastro/: __init__.py  constants.py  read.py  utils.py
pyastro/objects/: __init__.py  context.py  cusps.py  julian_day.py  location.py  nakshatra.py  planet.py  planets.py
pyastro/pyphemeris/: defaults.py  pyphemeris.py  read.py
pyphemeris/: __init__.py  constants.py  dasha_test.py  defaults.py  monthly_panchanga.py  parse.py  planets.py  pyphemeris.py  read.py  test.py  utils.py
pyphemeris/dict/: dict.iast  dict.mixed
pyphemeris/objects/: __init__.py  julian_day.py  location.py  planet.py  planets.py
sbc-config/charts/: chart-base.sbc  chart-ex.sbc  chart-template.sbc  dt.sbc  ernst-wilhelm.sbc  irina-tweedie.sbc  issac-middle.sbc  josh.sbc  marisa.sbc  phillip-glass.sbc
sbc-config/dicts/: dict.deva.sbc  dict.eng.sbc
sbc-config/themes/: joshs-theme.sbc  template-theme.sbc
