[project]
name = "libaditya"
version = "0.2.9"
description = "Astrological calculation library for Adityas. It is capable of calculating using tropical zodiac, tropical adityas, or sidereal signs. It can do any ayanamsa for naskhatras, including tropcial/sidereal nakshatras, or both sidereal or both tropical (right now, Vedanga Jyotisha ayanamsa). It has basic HD calculations in it; will include more soon. see README for more information on trying it."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "more-itertools>=10.8.0",
    "prettytable>=3.17.0",
    "pyswisseph>=2.10.3.2",
    "toml>=0.10.2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.sdist]
include = [
    "libaditya"
]
exclude = [
#  "*.json",
#  "pkg/_compat.py",
]



[tool.uv.workspace]
members = [
    ".",
]

[tool.uv.sources]
libaditya = { workspace = true }

[dependency-groups]
dev = [
    "libaditya",
]
