[project]
name = "libaditya"
version = "0.3.3"
description = "Astrological calculation library for Adityas. It is capable of calculating using tropical zodiac, tropical adityas, or sidereal signs. It can do any ayanamsa for naskhatras, including tropcial/sidereal nakshatras, or both sidereal or both tropical (right now, Vedanga Jyotisha ayanamsa). It has basic HD calculations in it; will include more soon. see README for more information on trying it."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    # for some legacy chart drawing the implemented before
    # one is human design bodygraphs
    # the other sarvatobhadra chakra
    # Chart().bodygraph().draw_svg() can draw a bodygraph for one chart
    # sbc can draw the base chakra image, nothing else yet
    "drawsvg>=2.4.1",
    # for getting weather data
    "metar>=1.11.0",
    "more-itertools>=10.8.0",
    "prettytable>=3.17.0",
    # requests is for using stellarium through libaditya
    # this requires the user to have open a running stellarium instance with the
    # http server running through the RemoteControl plugin
    "pyswisseph>=2.10.3.2",
    "requests>=2.32.5",
    "rich>=14.3.2",
    "toml>=0.10.2",
]

[project.urls]
Homepage = "https://gitlab.com/j0sh4rp3/libaditya"
Repository = "https://gitlab.com/j0sh4rp3/libaditya"

[project.optional-dependencies]
stellarium = []

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.sdist]
include = [
    "libaditya"
]
exclude = [
#  "*.json",
#  "pkg/_compat.py",
]


[tool.uv.workspace]
members = [
    ".",
    ".",
]

[tool.uv.sources]
libaditya = { workspace = true }

[dependency-groups]
dev = [
    "libaditya",
]
